# SubnetCalculator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  macos.yml
app/: CMakeLists.txt
app/resources/: icon.icns
app/src/: AbstractIpWidget.cpp  AbstractIpWidget.hpp  Application.cpp  Application.hpp  IpInputEventFilter.cpp  IpInputEventFilter.hpp  Ipv4Widget.cpp  Ipv4Widget.hpp  Ipv6Widget.cpp  Ipv6Widget.hpp  MainWindow.cpp  MainWindow.hpp  SaveAsDialog.cpp  SaveAsDialog.hpp  main.cpp
app/translations/: pl.ts
app/ui/: AbstractIpWidget.ui  Ipv4Widget.ui  Ipv6Widget.ui  MainWindow.ui  SaveAsDialog.ui
